[gd_scene load_steps=19 format=3 uid="uid://dg00cf0lksfqq"]

[ext_resource type="Texture2D" uid="uid://c5wrd0gm36s0h" path="res://assets/gothicvania patreon collection/Hell-Beast-Files/PNG/without-stroke/hell-beast-idle.png" id="1_2biid"]
[ext_resource type="Script" path="res://scripts/hell_beast.gd" id="1_m7hm6"]
[ext_resource type="Script" path="res://scripts/enemy_controller_hellBeast.gd" id="1_suoij"]
[ext_resource type="Script" path="res://scripts/flippableSprite.gd" id="2_p1wai"]
[ext_resource type="Script" path="res://scripts/hitbox_component.gd" id="3_1bwp3"]
[ext_resource type="Texture2D" uid="uid://6uh6u1esrwwv" path="res://assets/gothicvania patreon collection/Hell-Beast-Files/PNG/without-stroke/hell-beast-burn.png" id="3_u5fso"]
[ext_resource type="Script" path="res://scripts/flippable_shape.gd" id="4_bxkr7"]
[ext_resource type="Texture2D" uid="uid://n27s51jgeeod" path="res://assets/gothicvania patreon collection/Hell-Beast-Files/PNG/without-stroke/hell-beast-breath.png" id="4_ge0t8"]
[ext_resource type="PackedScene" uid="uid://ceonqfgt2vso7" path="res://scenes/UI/health_bar.tscn" id="9_v7cyo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdtjf"]
size = Vector2(36, 54)

[sub_resource type="Animation" id="Animation_en6xy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody2D/FlippableSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_2biid")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RigidBody2D/FlippableSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RigidBody2D/FlippableSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RigidBody2D/FlippableSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RigidBody2D/FlippableSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RigidBody2D/FlippableSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_ss4pw"]
resource_name = "breath"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody2D/FlippableSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RigidBody2D/FlippableSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ge0t8")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RigidBody2D/FlippableSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RigidBody2D/FlippableSprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RigidBody2D/FlippableSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_afelp"]
resource_name = "burn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody2D/FlippableSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_u5fso")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RigidBody2D/FlippableSprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RigidBody2D/FlippableSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RigidBody2D/FlippableSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RigidBody2D/FlippableSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -92.5)]
}

[sub_resource type="Animation" id="Animation_5pxdh"]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody2D/FlippableSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_2biid")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RigidBody2D/FlippableSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RigidBody2D/FlippableSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RigidBody2D/FlippableSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RigidBody2D/FlippableSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RigidBody2D/FlippableSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ba1ob"]
_data = {
"RESET": SubResource("Animation_en6xy"),
"breath": SubResource("Animation_ss4pw"),
"burn": SubResource("Animation_afelp"),
"idle": SubResource("Animation_5pxdh")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bpxo8"]
radius = 13.0
height = 51.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ao0b"]
size = Vector2(30, 54)

[sub_resource type="CircleShape2D" id="CircleShape2D_lvo2x"]
radius = 321.006

[node name="HellBeast" type="Node2D"]

[node name="EnemyController" type="Node" parent="."]
script = ExtResource("1_suoij")
enemyHealth = 200
max_enemyHealth = 200
enemyDamage = 40

[node name="Projectiles" type="Node" parent="." groups=["projectiles"]]

[node name="HellBeast" type="CharacterBody2D" parent="." groups=["enemy"]]
z_index = 1
script = ExtResource("1_m7hm6")

[node name="RigidBody2D" type="RigidBody2D" parent="HellBeast" groups=["enemy"]]

[node name="FlippableSprite" type="Sprite2D" parent="HellBeast/RigidBody2D"]
scale = Vector2(2, 2)
texture = ExtResource("1_2biid")
hframes = 6
script = ExtResource("2_p1wai")

[node name="HellBeastCollider" type="CollisionShape2D" parent="HellBeast/RigidBody2D"]
position = Vector2(-1, 13.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_bdtjf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HellBeast/RigidBody2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ba1ob")
}
autoplay = "idle"

[node name="ReceiveHitCollider" type="Area2D" parent="HellBeast/RigidBody2D"]
position = Vector2(4, -92.5)
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HellBeast/RigidBody2D/ReceiveHitCollider"]
position = Vector2(-4.5, 54.25)
shape = SubResource("CapsuleShape2D_bpxo8")
debug_color = Color(0.648155, 0.439598, 0.733291, 0.42)

[node name="HitboxComponent" type="Area2D" parent="HellBeast/RigidBody2D" node_paths=PackedStringArray("flippableSprite")]
script = ExtResource("3_1bwp3")
flippableSprite = NodePath("../FlippableSprite")

[node name="FlippableShape" type="CollisionShape2D" parent="HellBeast/RigidBody2D/HitboxComponent"]
position = Vector2(-36, 7)
shape = SubResource("RectangleShape2D_1ao0b")
disabled = true
debug_color = Color(0.641884, 0.466137, 0.640934, 0.42)
script = ExtResource("4_bxkr7")
default_position = Vector2(-38, 7)

[node name="AwarenessZone" type="Area2D" parent="HellBeast/RigidBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HellBeast/RigidBody2D/AwarenessZone"]
shape = SubResource("CircleShape2D_lvo2x")

[node name="ShootCooldown" type="Timer" parent="HellBeast/RigidBody2D"]
wait_time = 2.0

[node name="HealthBar" parent="HellBeast" instance=ExtResource("9_v7cyo")]
offset_left = -37.0
offset_top = -50.0
offset_right = 35.0
offset_bottom = -46.0
max_value = 200.0

[connection signal="area_shape_entered" from="HellBeast/RigidBody2D/ReceiveHitCollider" to="HellBeast" method="_on_receive_hit_collider_area_shape_entered"]
[connection signal="body_entered" from="HellBeast/RigidBody2D/AwarenessZone" to="HellBeast" method="_on_awareness_zone_body_entered"]
[connection signal="body_exited" from="HellBeast/RigidBody2D/AwarenessZone" to="HellBeast" method="_on_awareness_zone_body_exited"]
[connection signal="timeout" from="HellBeast/RigidBody2D/ShootCooldown" to="HellBeast" method="_on_shoot_cooldown_timeout"]
